manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactbot
  labels:
    slack-app: reactbot-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      slack-app: reactbot-svc
  template:
    metadata:
      labels:
        slack-app: reactbot-svc
    spec:
      containers:
      - name: reactbot
        image: csbull55/reactbot:main-5bdc59e3965ad82a2b52a18177232399999d75ef
        imagePullPolicy: Always
